--- a/default.html
+++ b/default.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EduTech</title> 
     <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="logo.css">
   </head>
   <body>
     <header>
