--- a/default.html
+++ b/default.html
@@ -8,18 +8,6 @@
     <link rel="stylesheet" href="logo.css">
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <a href="#">EduTech</a>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div id="header"></div>
   </body>
 </html>
