--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EduTech</title> 
+    <title>EduTech</title>
     <link rel="stylesheet" href="header.css" />
-    <link rel="stylesheet" href="logo.css">
+    <link rel="stylesheet" href="logo.css" />
   </head>
   <body>
     <div id="header"></div>
     <script src="header.js"></script>
+    <div id="footer"></div>
+    <script src="footer.js"></script>
   </body>
 </html>
