--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,13 @@
   <div class="footer-container">
     <div class="footer-logo">
       <h2>EduTech</h2>
-      <div class="footer-socials"></div>
+      <p>Empowering education through innovative learning tools</p>
+      <div class="footer-socials">
+        <a href="#" class="fab fa-facebook">FB</a>
+        <a href="#" class="fab fa-twitter">TW</a>
+        <a href="#" class="fab fa-instagram">IG</a>
+        <a href="#" class="fab fa-linkedin">IG</a>
+      </div>
     </div>
     <div class="footer-links"></div>
     <div class="footer-contact"></div>
