--- a/footer.html
+++ b/footer.html
@@ -4,10 +4,10 @@
       <h2>EduTech</h2>
       <p>Empowering education through innovative learning tools</p>
       <div class="footer-socials">
-        <a href="#" class="fab fa-facebook">FB</a>
-        <a href="#" class="fab fa-twitter">TW</a>
-        <a href="#" class="fab fa-instagram">IG</a>
-        <a href="#" class="fab fa-linkedin">IG</a>
+        <a href="#" class="fab fa-facebook"></a>
+        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-linkedin"></a>
       </div>
     </div>
     <div class="footer-links"></div>
