made changes to html file

--- a/footer.html
+++ b/footer.html
@@ -4,10 +4,10 @@
       <h2>EduTech</h2>
       <p>Empowering education through innovative learning tools</p>
       <div class="footer-socials">
-        <a href="#" class="fab fa-facebook"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
-        <a href="#" class="fab fa-kkedin"></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
       </div>
     </div>
     <div class="footer-links">
